--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tinacms dev -c \"next dev\"",
+    "dev:tina": "tinacms dev",
+    "dev:next": "next dev",
+    "dev": "concurrently \"npm run dev:tina\" \"npm run dev:next\"",
     "build": "tinacms build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "tinacms dev --noWatch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
@@ -28,6 +31,7 @@
     "@types/aos": "^3.0.7",
     "@types/node": "^20.14.14",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.1.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
